# ampbot

./: .gitignore  Cargo.toml  build.gradle  config.toml  crowdin.yml  settings.gradle
amp_config/: Cargo.toml
amp_config/src/: cfg.rs  lib.rs  load.rs
amp_core/: Cargo.toml
amp_core/src/: lib.rs
amp_i18n/: Cargo.toml
amp_i18n/locales/en-US/: test.ftl
amp_i18n/src/: main.rs
amp_logger/: Cargo.toml
amp_logger/src/: lib.rs
gradle/wrapper/: gradle-wrapper.properties
languages/: de-DE.json  de.yml  en-US.json  en-US.yml  en.yml
src/: main.rs
src/main/java/ovh/fedox/ampbot/: AMPBot.java  AMPConfig.java  AMPEmoji.java
src/main/java/ovh/fedox/ampbot/commands/: CommandHandler.java
src/main/java/ovh/fedox/ampbot/commands/impl/: TestCommand.java
src/main/java/ovh/fedox/ampbot/commands/interfaces/: AMPCommand.java
src/main/java/ovh/fedox/ampbot/commands/models/: AMPCommandData.java
src/main/java/ovh/fedox/ampbot/commands/types/: AMPCommand.java  AMPCommandData.java  AMPCommandOption.java
src/main/java/ovh/fedox/ampbot/core/: AMPClient.java  AMPLoader.java  AMPTranslation.java
src/main/java/ovh/fedox/ampbot/database/: AMPDatabase.java
src/main/java/ovh/fedox/ampbot/database/models/: Guild.java
src/main/java/ovh/fedox/ampbot/helpers/: AMPLoader.java  AMPTranslation.java  ConfigParser.java  TomlParser.java
src/main/java/ovh/fedox/ampbot/listener/: ClientReady.java
src/main/java/ovh/fedox/ampbot/listener/impl/: ClientReady.java
src/main/resources/: emojis.toml
src/test/java/ovh/fedox/ampbot/: MongoTest.java
(+2 files in other folders)
